fix: overflow

--- a/building-blocks/src/styles/blocks.css
+++ b/building-blocks/src/styles/blocks.css
@@ -28,7 +28,7 @@
   justify-content: flex-start;
   align-content: center;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 
