--- a/building-blocks/src/styles/playground.css
+++ b/building-blocks/src/styles/playground.css
@@ -30,5 +30,5 @@
   justify-content: flex-start;
   align-content: center;
 
-  overflow: scroll;
+  overflow: auto;
 }
